Create template for UI.

--- a/dev/scss/variables.scss
+++ b/dev/scss/variables.scss
@@ -1,2 +1,17 @@
-$brand-primary: #36c;
-$color-white: #fff;
+$color-white:               #fff;
+$color-transparent:         transparent;
+
+$font-size-base:            14px;
+$font-size-enlarge:         18px;
+
+$text-color:                #6d6d6d;
+$brand-primary:             #36c;
+$brand-secondary:           #f1be51;
+$brand-secondary-light:     #fff7e0;
+
+$input-placeholder-color:   $text-color;
+$brand-primary-grey:        #f4f1f5;
+
+$input-border-color:        $brand-primary-grey;
+
+$border-radius-base:      6px;
