--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -1,6 +1,19 @@
 @import "bootstrap";
 @import "variables";
 
-.deneme {
+@import "forms";
+
+h1 {
+    color: $brand-secondary;
+    text-align: center;
+}
+
+.header {
     background-color: $brand-primary;
+    color: $color-white;
+    padding: 1em 0;
+}
+
+.main {
+    padding: 1em 0;
 }
